istio/premium-mtls.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "premium-svc"
spec:
  selector:
    matchLabels:
      app: premium
      role: business
      type: backend
  mtls:
    mode: STRICT
