istio/redis-mtls.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "premium-redis"
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  mtls:
    mode: DISABLE
