istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: premium-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      #mode: SIMPLE
      mode: MUTUAL
      credentialName: esyhealth-credential
    hosts:
    - "esyhealth.kubesure.io"  
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "esyhealth.kubesure.io"
