istio/policy-mysql-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysql-external-se
spec:
  hosts:
  - host.minikube.internal
  addresses:
  - 192.168.39.1
  ports:
  - name: tcp
    number: 3306
    protocol: tcp
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 192.168.39.1
