istio/premium-virtual-svc-.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: premium
spec:
  hosts:
  - "esyhealth.kubesure.io"
  - "premiumcalc-svc"
  gateways:
  - premium-gateway
  http:
  - match:
    - headers:
        client-channel: 
          exact: mobile
        client-id: 
          exact: paytm      
    route:
    - destination:
        host: premiumcalc-svc
        subset: v2
  - match:
    - uri:
        exact: /api/v1/healths/premiums
    route:
    - destination:
        host: premiumcalc-svc
        subset: v1
      weight: 100
    #- destination:
        #host: premiumcalc-svc
        #subset: v2    
      #weight: 50  
    retries:
      attempts: 3
      perTryTimeout: 2s 
      retryOn: gateway-error,connect-failure,refused-stream   
    timeout: 1s    
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: premium-destination
spec:
  host: premiumcalc-svc.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        http1MaxPendingRequests: 10
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
